# antigravity-switch

./: .gitignore  README.md  app.js  index.html  main.js  package-lock.json  package.json  server.js  styles.css
.github/workflows/: build.yml  ci.yml  release.yml
scripts/: generate-icon.js
src/: App.tsx  index.css
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: account.rs  db.rs  main.rs  oauth.rs  quota.rs  switch.rs
src/components/: AboutView.tsx  AccountCard.tsx  AddAccountModal.tsx  EmptyState.tsx  Header.tsx  SettingsView.tsx  Sidebar.tsx  StatsCard.tsx
src/components/ui/: button-group.tsx  button.tsx  form.tsx  navigation-menu.tsx  pagination.tsx  sidebar.tsx
src/hooks/: toast-provider.tsx  use-form-field.ts  use-sidebar.ts  use-toast.ts  use-toast.tsx
src/lib/: tauri-api.ts
src/types/: index.ts
