[package]
name = "antigravity-switch"
version = "1.0.0"
description = "One-click account switcher for Antigravity AI"
authors = ["Antigravity"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "process-all", "shell-open", "system-tray", "window-all", "dialog-all", "fs-all", "path-all", "notification-all", "os-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
uuid = { version = "1.6", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
open = "5.0"
dotenv = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
